# mcp-image-gen

./: .env.example  .gitignore  CLAUDE.md  README.md  README_CN.md  pyproject.toml
src/image_gen/: __main__.py  server.py
