[project]
name = "gemini-image-gen"
version = "1.0.0"
description = "MCP server for AI image generation using Google Gemini. Supports multiple models including Nano Banana 2. Images are automatically saved to disk."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx[socks]>=0.28.1",
    "mcp>=1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_gen"]

[project.scripts]
image-gen = "image_gen:main"
