[project]
name = "gemini-image-gen"
version = "1.2.0"
description = "MCP server for AI image generation using Google Gemini and Imagen. Supports AI Studio (free) and Vertex AI (GCP credits)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx[socks]>=0.28.1",
    "mcp>=1.1.2",
]

[project.optional-dependencies]
vertex = ["google-auth>=2.20.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_gen"]

[project.scripts]
image-gen = "image_gen:main"
